<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg1"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"/>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="121dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="Remember Me"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="126dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/login"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
